backend/ingress/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: book-app-backend-httproute
spec:
  parentRefs:
    - name: traefik-gateway # Replace with your Gateway name
  hostnames:
    - "api.book-app.local" # Adjust to your domain
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: book-app-backend
          port: 5001
